k8s/6-tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets
  template:
    metadata:
      labels:
        app: ticketing-tickets
    spec:
      containers:
        - name: ticketing-tickets
          image: jubasse/ticketing-tickets
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets
spec:
  selector:
    app: ticketing-tickets
  ports:
    - name: ticketing-ticket
      protocol: TCP
      port: 3000
      targetPort: 3000
