k8s/7-users-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: users-ticketing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-users
  template:
    metadata:
      labels:
        app: ticketing-users
    spec:
      containers:
        - name: ticketing-users
          image: jubasse/ticketing-users
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-users
spec:
  selector:
    app: ticketing-users
  ports:
    - name: ticketing-users
      protocol: TCP
      port: 3000
      targetPort: 3000
