k8s/9-kafka-depl.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ticketing-kafka-deployment
  labels:
    app: ticketing-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-kafka
  template:
    metadata:
      labels:
        app: ticketing-kafka
    spec:
      containers:
      - name: ticketing-kafka-broker
        image: confluentinc/cp-kafka:latest
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-kafka-svc
spec:
  selector:
    app: ticketing-kafka
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
